# libspng0.7.3

./: README.md
libspng_19.0.24215.1_install/lib/: spng.lib  spng_static.lib
libspng_19.0.24215.1_install/lib/cmake/spng/: spngConfig.cmake  spngTargets-debug.cmake  spngTargets.cmake
spng_external_app/: CMakeLists.txt  mymathApp.cc
src/: CMakeLists.txt  spngConfig.cmake.in
